clean up phase 6, many clean up